# easypattern

./: .travis.yml  ChangeLog  Jenkinsfile  MANIFEST  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
easy_pattern/: easy_pattern.py
tests/: test_pattern.py
