[metadata]
name = easy_pattern
author = Joern Boegeholz
author-email = boegeholz.joern@gmail.com
summary = A Pseudo-DSL for Python RegEx
description-file = README.md
home-page = https://github.com/jboegeholz/easypattern
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    tutorial

[files]
packages =
    easy_pattern


[bdist_wheel]
universal = 1